--- a/CursoCss/projeto_Tecblog/css/estilo.css
+++ b/CursoCss/projeto_Tecblog/css/estilo.css
@@ -22,20 +22,59 @@ body{
 #area-logo, #area-menu {
     padding: 10px;
 }
+#area-principal {
+    width: 920px;
+    margin: 0 auto;
+    padding: 15px;
+}
+#area-postagens {
+    width: 660px;
+    float: left;
+}
+#area-lateral {
+    width: 240px;
+    float: right;
+}
+
+.postagem {
+    padding: 20px;
+    margin-bottom: 20px;
+    background: white;
+}
+.conteudo-lateral{
+    background: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+#rodape {
+    clear: both;
+    text-align: center;
+    padding: 15px;
+    background: #ccc;
+}
 /*
 **** Formatação do menu ****
 */
 a {
     text-decoration: none;
 }
- a:link, a:visited {
+
+a:link, a:visited {
+    color: #f7b600;
+
+ }
+ a:hover {
+    text-decoration: underline;
+ }
+ #area-cabecalho a:link,#area-cabecalho a:visited {
     color: #fff;
     padding: 8px 12px;
 
  }
- a:hover {
+ #area-cabecalho a:hover {
     color: #f7b600;
     background: white;
+    text-decoration: none;
  }
  /*
  **** Formatações em geral ****
@@ -47,4 +86,15 @@ a {
 
  .branco {
     color: white;
+ }
+ h2 {
+    color: #f7b600;
+ }
+ .data-postagem {
+    font-size: 0.8em;
+    border-bottom: 1px solid #f4f4f4 ;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
+    
  }
