--- a/CursoCss Intermediario e avançado/estilo.css
+++ b/CursoCss Intermediario e avançado/estilo.css
@@ -17,15 +17,18 @@ ul {
     list-style-type: none;
 }
 ul a {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     width: 200px;
     height: 40px;
     display: block;
     color: #000;
     text-decoration: none;
     text-indent: 40px;
+    line-height: 40px;
     background: url(imagens/menu.png) no-repeat left bottom;
 }
 a:hover {
     background-position: right bottom;
+    color: #fff;
+
 }
